Completo API Veicoli e aggiugno logger

--- a/RR-Client-model-resource-server/pom.xml
+++ b/RR-Client-model-resource-server/pom.xml
@@ -71,6 +71,7 @@
             <scope>provided</scope>
         </dependency>
 
+
         <!-- Spring Boot JPA -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -93,6 +94,24 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+        <!-- Spring Boot LOGGER -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
+
+        <!-- SLF4J API -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+        <!-- Logback classic -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -103,6 +122,7 @@
             </plugin>
 
             <!-- Plugin Swagger -->
+            <!--
             <plugin>
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
@@ -127,8 +147,7 @@
                     </execution>
                 </executions>
             </plugin>
-
-
+            -->
         </plugins>
     </build>
 
