--- a/RR-Client-model-resource-server/src/main/resources/application.properties
+++ b/RR-Client-model-resource-server/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/rideready
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+logging.level.root=INFO
+logging.level.com.example=TRACE
